--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -1,25 +1,44 @@
-<h2>Login</h2>
-<app-alert></app-alert>
-<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-    <div class="form-group">
-        <label for="email">Email</label>
-        <input type="text" formControlName="email" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
-        <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
-            <div *ngIf="f.email.errors.required">Email is required</div>
+<body>
+    <app-alert></app-alert>
+<div class="card" style="width: 18rem;">
+    <img src="../../../../assets/logo/burger-au-fromage.png" alt="Logo" class="my-3">
+    <div class="logo-name">Le Crock Sand'Wich</div>
+    <div class="card-body">
+      <h5 class="card-title">Connexion</h5>
+      <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+        <div class="form-group">
+            <label for="email">Adresse Email</label>
+            <input type="text" formControlName="email" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
+            <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
+                <div *ngIf="f.email.errors.required">L'email ne peut pas être vide</div>
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
-        <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-            <div *ngIf="f.password.errors.required">Password is required</div>
+        <div class="form-group">
+            <label for="password">Mot de Passe</label>
+            <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
+            <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+                <div *ngIf="f.password.errors.required">Le mot de passe est necessaire </div>
+            </div>
         </div>
+        <br>
+        <div class="checkbox">
+            <input type="checkbox" id="remember-me">
+            <label for="remember-me">  Se souvenir de Moi</label>
+        </div>
+        <br>
+        <div class="form-group">
+            <button [disabled]="loading" (click)="onSubmit()" class="btn btn-primary">
+                <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+                Connexion
+            </button>
+        </div>
+        <div class="log-up">          
+            Pas de Compte?
+            <br>
+            <button type="button" class="btn btn-outline-dark">Creer un Compte</button>
+        </div>
+    </form>
     </div>
-    <div class="form-group">
-        <button [disabled]="loading" (click)="onSubmit()" class="btn btn-primary">
-            <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
-            Login
-        </button>
-        <a routerLink="/register" class="btn btn-link">Register</a>
-    </div>
-</form>
+  </div>
+
+</body>
