--- a/src/app/components/auth/register/register.component.html
+++ b/src/app/components/auth/register/register.component.html
@@ -1,39 +1,51 @@
-<h2>Register</h2>
-<app-alert></app-alert>
-<form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
-    <div class="form-group">
-        <label for="name">First Name</label>
-        <input type="text" formControlName="name" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.name.errors }" />
-        <div *ngIf="submitted && f.name.errors" class="invalid-feedback">
-            <div *ngIf="f.name.errors.required">Name is required</div>
+<body class="mt-5">
+    <div class="card" style="width: 18rem">
+        <div class="logo-name">
+            <img src="../../../../assets/logo/burger.png" alt="Logo" class="my-3">
+            <p>Le Crock Sand'Wich</p>
+            <app-alert></app-alert>
+        </div>
+        <div class="card-body">
+            <h5 class="card-title">Registration</h5>
+            <app-alert></app-alert>
+            <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+                <div class="form-group">
+                    <label for="name">First Name</label>
+                    <input type="text" formControlName="name" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.name.errors }" />
+                    <div *ngIf="submitted && f.name.errors" class="invalid-feedback">
+                        <div *ngIf="f.name.errors.required">Name is required</div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="text" formControlName="email" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.name.errors }" />
+                    <div *ngIf="submitted && f.name.errors" class="invalid-feedback">
+                        <div *ngIf="f.name.errors.required">Email is required</div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="password">Password</label>
+                    <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
+                    <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+                        <div *ngIf="f.password.errors.required">Password is required</div>
+                        <div *ngIf="f.password.errors.minlength">Password must be at least 6 characters</div>
+                    </div>
+                </div>
+                <div class="form-group" *ngIf="auth().loggedIn()">
+                    <label for="type">Type</label>
+                    <select name="type" formControlName="type" class="form-control" id="type" [ngClass]="{ 'is-invalid': submitted && f.type.errors }">
+                        <option *ngFor="let type of userTypes" value="{{type.id}}">{{type.name}}</option>
+                    </select>
+                </div>
+                <div class="form-group mt-4">
+                    <button [disabled]="loading" (click)="onSubmit()" class="btn btn-primary">
+                        <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+                        Register
+                    </button>
+                    <a routerLink="/login" class="btn btn-link">Login</a>
+                </div>
+            </form>
         </div>
     </div>
-    <div class="form-group">
-        <label for="email">Email</label>
-        <input type="text" formControlName="email" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.name.errors }" />
-        <div *ngIf="submitted && f.name.errors" class="invalid-feedback">
-            <div *ngIf="f.name.errors.required">Email is required</div>
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
-        <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-            <div *ngIf="f.password.errors.required">Password is required</div>
-            <div *ngIf="f.password.errors.minlength">Password must be at least 6 characters</div>
-        </div>
-    </div>
-    <div class="form-group" *ngIf="auth().loggedIn()">
-        <label for="type">Type</label>
-        <select name="type" formControlName="type" class="form-control" id="type" [ngClass]="{ 'is-invalid': submitted && f.type.errors }">
-            <option *ngFor="let type of userTypes" value="{{type.id}}">{{type.name}}</option>
-        </select>
-    </div>
-    <div class="form-group mt-4">
-        <button [disabled]="loading" (click)="onSubmit()" class="btn btn-primary">
-            <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
-            Register
-        </button>
-        <a routerLink="/login" class="btn btn-link">Login</a>
-    </div>
-</form>
+</body>
+
