login and register small modification

--- a/src/app/components/auth/register/register.component.css
+++ b/src/app/components/auth/register/register.component.css
@@ -10,3 +10,6 @@ body{
     font-size: x-large;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
+.log-in{
+    font-size: small;
+}
