--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -29,7 +29,7 @@
         </div>
         <br>
         <div class="form-group">
-            <button [disabled]="loading" (click)="onSubmit()" class="btn btn-primary">
+            <button [disabled]="loading" (click)="onSubmit()" class="btn btn-primary d-grid gap-2 col-6 mx-auto">
                 <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
                 Connexion
             </button>
@@ -37,7 +37,7 @@
         <div class="log-up">          
             Pas de Compte?
             <br>
-            <button type="button" class="btn btn-outline-dark" routerLink="/register">Creer un Compte</button>
+            <button type="button" class="btn btn-outline-dark d-grid gap-2 col-6 mx-auto" routerLink="/register">S'inscrire</button>
         </div>
     </form>
     </div>
