--- a/src/app/components/auth/register/register.component.html
+++ b/src/app/components/auth/register/register.component.html
@@ -6,29 +6,29 @@
             <app-alert></app-alert>
         </div>
         <div class="card-body">
-            <h5 class="card-title">Registration</h5>
+            <h5 class="card-title">Inscription</h5>
             <app-alert></app-alert>
             <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
                 <div class="form-group">
-                    <label for="name">First Name</label>
+                    <label for="name">Nom</label>
                     <input type="text" formControlName="name" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.name.errors }" />
                     <div *ngIf="submitted && f.name.errors" class="invalid-feedback">
-                        <div *ngIf="f.name.errors.required">Name is required</div>
+                        <div *ngIf="f.name.errors.required">Le nom est nécessaire</div>
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="email">Email</label>
                     <input type="text" formControlName="email" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.name.errors }" />
                     <div *ngIf="submitted && f.name.errors" class="invalid-feedback">
-                        <div *ngIf="f.name.errors.required">Email is required</div>
+                        <div *ngIf="f.name.errors.required">L'adresse email n'est pas facultative</div>
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="password">Password</label>
                     <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
                     <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-                        <div *ngIf="f.password.errors.required">Password is required</div>
-                        <div *ngIf="f.password.errors.minlength">Password must be at least 6 characters</div>
+                        <div *ngIf="f.password.errors.required"> Mot de passe requis</div>
+                        <div *ngIf="f.password.errors.minlength">Le mot de passe doit être au moins de 6 caractères</div>
                     </div>
                 </div>
                 <div class="form-group" *ngIf="auth().loggedIn()">
@@ -38,11 +38,15 @@
                     </select>
                 </div>
                 <div class="form-group mt-4">
-                    <button [disabled]="loading" (click)="onSubmit()" class="btn btn-primary">
+                    <button [disabled]="loading" (click)="onSubmit()" class="btn btn-primary d-grid gap-2 col-6 mx-auto">
                         <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
-                        Register
+                       Inscription
                     </button>
-                    <a routerLink="/login" class="btn btn-link">Login</a>
+                    <div class="log-in">
+                        Vous avez déja un compte?
+                        <br>
+                        <a routerLink="/login" class="btn btn-outline-dark d-grid gap-2 col-6 mx-auto">Connexion</a>
+                    </div>
                 </div>
             </form>
         </div>
